# Changelog for Romanesco Backyard

## Backyard 0.9.2
Released on May 22, 2019

- Improve styling of CB mini repeaters
- Load tool shed menu title with lexicon

## Backyard 0.9.1
Released on February 10, 2019

- Load Semantic UI styles inside CB preview containers

## Backyard 0.9.0
Released on January 21, 2019

- Remove all resources from package (due to update issues)
- Backup resourcemap.php before running installer

## Backyard 0.8.0
Released on January 17, 2019

- Enable 3-level dropdowns in Backyard navigation
- Add Kanban view for tracking page progress
- Update status icons and lexicon keys
- Change template to BasicDetailToC on pattern pages
- Add latest Electrons to front-end library

## Backyard 0.7.0
Released on November 15, 2018

- Add database schema for new Romanesco components
    - Timeline
    - Project timeline
    - Notes
    - Issues
    - Content improvements
    - Crosslinks
    - Related content
    - Re-purpose content
    - Input options
    - Input option groups
- Add MIGX configs for managing data in TVs and CMPs
- Add resolver to load default set of input options
- Build config file with PHP instead of Grunt

## Backyard 0.6.0
Released on July 27, 2018

- Remove popup examples with MODX code from pattern library

## Backyard 0.5.1
Released on January 16, 2018

- Add resource with CSS theme variables
- Add gulp task for generating favicons
- Add basic contact form

## Backyard 0.5.0
Released on December 19, 2017

- Import assets folder from Romanesco Soil repository
- Assign resource IDs to corresponding system settings after installation

## Backyard 0.4.2
Released on November 21, 2017

- Include content_type in resource configs (fixes undefined index PHP warnings)

## Backyard 0.4.1
Released on November 21, 2017

- Update resolver to fix installation issues

## Backyard 0.4.0
Released on July 25, 2017

- Add Tutorials and Test cases to Backyard area
- Move current categories under Backyard page to Examples subpage

## Backyard 0.3.3