@@ -1,5 +1,10 @@
 # Changelog for Romanesco Backyard
 
+## Backyard 0.X.X
+Released on ...
+
+- Show IDs of input options in grid
+
 ## Backyard 0.9.2
 Released on May 22, 2019
 
